# rsmpeg

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
doc/: installed.md  non-windows.md  source-build.md  vcpkg.md  windows.md  winget.md
examples/: README.md  shadertoy.rs
examples/shadertoy/: main.rs
src/: error.rs  lib.rs  macros.rs
src/avcodec/: avpicture.rs  bitstream.rs  codec.rs  codec_id.rs  codec_par.rs  mod.rs  packet.rs  parser.rs
src/avdevice/: mod.rs
src/avfilter/: avfilter.rs  mod.rs
src/avformat/: avformat.rs  avio.rs  mod.rs
src/avutil/: audio_fifo.rs  buffer.rs  channel_layout.rs  dict.rs  error.rs  file.rs  frame.rs  hwcontext.rs  imgutils.rs  md5.rs  media_type.rs  mem.rs  mod.rs  motion_vector.rs  opt.rs  pixdesc.rs  pixfmt.rs  rational.rs  samplefmt.rs  timestamp.rs  utils.rs  version.rs
src/shared/: mod.rs
src/swresample/: mod.rs  swresample.rs
src/swscale/: mod.rs  swscale.rs  utils.rs
tests/: av_spliter.rs  avio_reading.rs  avio_writing.rs  codec.rs  decode_audio.rs  decode_video.rs  encode_video.rs  extract_mvs.rs  image.rs  image_dump.rs  metadata.rs  remux.rs  sdk_transcoding.rs  tests.rs  thumbnail.rs  transcode.rs  transcode_aac.rs  transcoding.rs  tutorial01.rs  tutorial01_safe.rs
tests/assets/audios/: sample1_short.aac
tests/assets/shaders/: fg_shader_dream.glsl  fg_shader_fractal.glsl  fg_shader_tunnel.glsl  vt_shader.glsl
tests/assets/vids/: bear.yuv  bunny.flv  mov_sample.mov
tests/ffmpeg_examples/: README.md  decode_audio.rs  decode_filter_audio.rs  decode_filter_video.rs  decode_video.rs  demux_decode.rs  encode_video.rs  extract_mvs.rs  filter_audio.rs  hw_decode.rs  mod.rs  qsv_decode.rs  remux.rs  resample_audio.rs  scale_video.rs  transcode.rs  transcode_aac.rs  vaapi_encode.rs
tests/misc/: av_spliter.rs  avio_reading.rs  avio_writing.rs  frame_image_copy_to_buffer.rs  image_dump.rs  metadata.rs  mod.rs  thumbnail.rs  tutorial01.rs
tests/utils/decode_video/decoded/: centaur_decoded-1.pgm  centaur_decoded-10.pgm  centaur_decoded-100.pgm  centaur_decoded-101.pgm  centaur_decoded-102.pgm  centaur_decoded-103.pgm  centaur_decoded-104.pgm  centaur_decoded-105.pgm  centaur_decoded-106.pgm  centaur_decoded-107.pgm  centaur_decoded-108.pgm  centaur_decoded-109.pgm  centaur_decoded-11.pgm  centaur_decoded-110.pgm  centaur_decoded-111.pgm  centaur_decoded-112.pgm  centaur_decoded-113.pgm  centaur_decoded-114.pgm  centaur_decoded-115.pgm  centaur_decoded-116.pgm  centaur_decoded-117.pgm  centaur_decoded-118.pgm  centaur_decoded-119.pgm  centaur_decoded-12.pgm  centaur_decoded-120.pgm  centaur_decoded-121.pgm  centaur_decoded-122.pgm  centaur_decoded-123.pgm  centaur_decoded-124.pgm  centaur_decoded-125.pgm  centaur_decoded-126.pgm  centaur_decoded-127.pgm  centaur_decoded-128.pgm  centaur_decoded-129.pgm  centaur_decoded-13.pgm  centaur_decoded-130.pgm  centaur_decoded-131.pgm  centaur_decoded-132.pgm  centaur_decoded-133.pgm  centaur_decoded-134.pgm  (+378 more)
tests/utils/transcode_aac/: output.aac
tests/utils/tutorial01_safe/decoded/: frame1.ppm  frame2.ppm  frame3.ppm  frame4.ppm  frame5.ppm
utils/: linux_ffmpeg.rs  mac_ffmpeg.rs  windows_ffmpeg.rs
