[package]
name = "rsmpeg"
version = "0.13.0+ffmpeg.6.0"
authors = ["liudingming <liudingming@bytedance.com>"]
edition = "2021"
license = "MIT"
description = "A Rust crate that exposes FFmpeg's power as much as possible."
keywords = ["ffmpeg", "ffi", "binding", "audio", "video"]
homepage = "https://github.com/larksuite/rsmpeg"
documentation = "https://docs.rs/rsmpeg"
repository = "https://github.com/larksuite/rsmpeg"
readme = "README.md"
exclude = ["tests/*", "examples/*", "utils/*"]
rust-version = "1.64.0"

[dependencies]
rusty_ffmpeg = { version = "0.13", features = ["ffmpeg5"] }
libc = "0.2"
paste = "1.0"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0.57"
cstr = "0.2.11"
once_cell = "1.12.0"
tempdir = "0.3.7"

[features]
# FFmpeg 6.* support
ffmpeg6 = ["rusty_ffmpeg/ffmpeg6"]
# linking system ffmpeg as fallback.
link_system_ffmpeg = ["rusty_ffmpeg/link_system_ffmpeg"]
