[package]
name = "rsmpeg"
version = "0.15.1+ffmpeg.7.0"
authors = ["liudingming <liudingming@bytedance.com>"]
edition = "2021"
license = "MIT"
description = "A Rust crate that exposes FFmpeg's power as much as possible."
keywords = ["ffmpeg", "ffi", "binding", "audio", "video"]
homepage = "https://github.com/larksuite/rsmpeg"
documentation = "https://docs.rs/rsmpeg"
repository = "https://github.com/larksuite/rsmpeg"
readme = "README.md"
exclude = ["/.github", "/tests", "/utils"]
rust-version = "1.70.0"

[dependencies]
rusty_ffmpeg = "0.16.1"
paste = "1.0"
thiserror = "1.0"

[dev-dependencies]
libc = "0.2"
anyhow = "1.0.57"
cstr = "0.2.11"
once_cell = "1.12.0"
tempdir = "0.3.7"
camino = "1.1.6"

[features]
# Use FFmpeg 7 by default
default = ["ffmpeg7"]

# Note that ffmpeg{x} feature is designed to be addable (If it's not, compilation with all-features won't pass)
ffmpeg6 = ["rusty_ffmpeg/ffmpeg6"]
ffmpeg7 = ["ffmpeg6", "rusty_ffmpeg/ffmpeg7"]

# Try linking ffmpeg with pkg-config.
link_system_ffmpeg = ["rusty_ffmpeg/link_system_ffmpeg"]
# Try linking ffmpeg with vcpkg.
link_vcpkg_ffmpeg = ["rusty_ffmpeg/link_vcpkg_ffmpeg"]
